[project]
name = "htmpy"
version = "0.1.0"
description = "Build HTML documents programmatically using Python objects."
readme = "README.md"
authors = [
    { name = "Sebastiaan Vermeulen", email = "me@vqi.io" },
]
requires-python = ">=3.12.0, <3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["htmpy"]

[tool.hatch.build.targets.src]
packages = ["htmpy"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.3.5",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
exclude = ["htmpy_tests"]
